<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <modules>
        <module>rf-system</module>
        <module>rf-cg-web</module>
        <module>rf-cg-core</module>
        <module>rf-cg-supplier</module>
        <module>rf-common</module>
        <module>rf-flow</module>
        <module>rf-cg-supplier-web</module>
        <module>sdebank-spi</module>
    </modules>

    <parent>
        <artifactId>sofaboot-dependencies</artifactId>
        <groupId>com.alipay.sofa</groupId>
        <version>3.4.5</version>
    </parent>
    <groupId>com.realfinance.sofa</groupId>
    <artifactId>rf-sofa</artifactId>
    <version>1.0-SNAPSHOT</version>
    <name>rf-sofa</name>
    <description>Sofa项目工作空间</description>

    <packaging>pom</packaging>

    <properties>
        <java.version>11</java.version>
        <sofa.registry.version>5.2.0</sofa.registry.version>
        <flowable.version>6.6.0</flowable.version>
        <mybatis.version>2.1.3</mybatis.version>
        <hutool.version>5.5.6</hutool.version>
        <commons-net.version>3.7.2</commons-net.version>
        <spring.plugin.version>2.0.0.RELEASE</spring.plugin.version>
        <springdoc.version>1.5.1</springdoc.version>
        <org.mapstruct.version>1.4.2.Final</org.mapstruct.version>
        <maven.surefire.plugin>2.21.0</maven.surefire.plugin>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.alipay.sofa</groupId>
                <artifactId>registry-client-all</artifactId>
                <version>${sofa.registry.version}</version>
            </dependency>
            <dependency>
                <groupId>org.mapstruct</groupId>
                <artifactId>mapstruct</artifactId>
                <version>${org.mapstruct.version}</version>
            </dependency>
            <dependency>
                <groupId>org.mapstruct</groupId>
                <artifactId>mapstruct-processor</artifactId>
                <version>${org.mapstruct.version}</version>
            </dependency>

            <dependency>
                <groupId>org.springdoc</groupId>
                <artifactId>springdoc-openapi-webmvc-core</artifactId>
                <version>${springdoc.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springdoc</groupId>
                <artifactId>springdoc-openapi-security</artifactId>
                <version>${springdoc.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springdoc</groupId>
                <artifactId>springdoc-openapi-ui</artifactId>
                <version>${springdoc.version}</version>
            </dependency>

            <dependency>
                <groupId>org.springframework.plugin</groupId>
                <artifactId>spring-plugin-core</artifactId>
                <version>${spring.plugin.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.plugin</groupId>
                <artifactId>spring-plugin-metadata</artifactId>
                <version>${spring.plugin.version}</version>
            </dependency>
            <dependency>
                <groupId>org.flowable</groupId>
                <artifactId>flowable-spring-boot-starter</artifactId>
                <version>${flowable.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <profiles>
        <profile>
            <id>jdk11</id>
            <activation>
                <jdk>11</jdk>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <version>${maven.surefire.plugin}</version>
                        <dependencies>
                            <dependency>
                                <groupId>org.ow2.asm</groupId>
                                <artifactId>asm</artifactId>
                                <version>6.2</version>
                            </dependency>
                        </dependencies>
                        <configuration>
                            <reuseForks>false</reuseForks>
                            <argLine> -Djdk.attach.allowAttachSelf --add-opens java.base/jdk.internal.loader=ALL-UNNAMED </argLine>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>